--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@
       <section class="relative py-12 lg:py-24 overflow-hidden"><img class="absolute bottom-0 left-0" src="fauna-assets/about/lines.svg" alt=""/>
         <div class="container mx-auto px-4 relative">
           <div class="max-w-4xl mx-auto text-center">
-            <h1 class="font-heading text-5xl sm:text-6xl mb-8">About us</h1>
+            <h1 class="font-heading text-5xl sm:text-6xl mb-8">About us11111111</h1>
             <p class="text-2xl text-black font-medium mb-10">At Flora&Fauna, we're committed to a sustainable future. As a pioneering force in the green energy sector, we've been at the forefront of the transition to clean, renewable power sources. Our mission is simple yet profound: to create a world where energy is not only abundant but also environmentally responsible. We believe that by harnessing the power of nature, we can power the world and protect it simultaneously.</p><a class="inline-flex py-4 px-6 items-center justify-center text-lg font-medium text-teal-900 hover:text-white border border-teal-900 hover:bg-teal-900 rounded-full transition duration-200" href="#">Read more</a>
           </div>
         </div>
@@ -101,7 +101,7 @@
             </div>
             <div class="w-full md:w-1/2 px-4">
               <div class="lg:max-w-lg md:ml-auto">
-                <p class="text-xl font-medium mb-10">At Flora&Fauna, we're committed to a sustainable future. As a pioneering force in the green energy sector, we've been at the forefront of the transition to clean, renewable power sources. Our mission is simple yet profound: to create a world where energy is not only abundant but also environmentally responsible. We believe that by harnessing the power of nature, we can power the world and protect it simultaneously.</p><a class="inline-flex py-4 px-6 items-center justify-center text-lg font-medium text-teal-900 hover:text-lime-500 border border-lime-500 hover:border-teal-900 bg-lime-500 hover:bg-teal-900 rounded-full transition duration-300" href="#">Read more</a>
+                <p class="text-xl font-medium mb-10">At2222222222222222222222 Flora&Fauna, we're committed to a sustainable future. As a pioneering force in the green energy sector, we've been at the forefront of the transition to clean, renewable power sources. Our mission is simple yet profound: to create a world where energy is not only abundant but also environmentally responsible. We believe that by harnessing the power of nature, we can power the world and protect it simultaneously.</p><a class="inline-flex py-4 px-6 items-center justify-center text-lg font-medium text-teal-900 hover:text-lime-500 border border-lime-500 hover:border-teal-900 bg-lime-500 hover:bg-teal-900 rounded-full transition duration-300" href="#">Read more</a>
               </div>
             </div>
           </div>
