--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 
 <html lang="en">
   <head>
-    <title>Visit www.pixelrocket.store to learn how to become a frontend web developer</title>
+    <title>SensiData</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <link rel="preconnect" href="https://fonts.gstatic.com"/>
     <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&amp;display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="css/tailwind/tailwind.min.css"/>
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon.png"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon1.png"/>
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.13.3/dist/cdn.min.js" defer="defer"></script>
   </head>
   <body class="antialiased bg-body text-body font-body">
     <div>
       <div>
-        <p class="mb-0 py-3 bg-lime-500 text-center">Want to learn how to build templates like this one? Visit <a href="https://www.pixelrocket.store">www.pixelrocket.store</a></p>
+        <p class="mb-0 py-3 bg-lime-500 text-center">Contáctanos al correo sensidata1@gmail.com o al número +56 966015839 <a href="https://www.sensidata.cl">www.sensidata.cl</a></p>
       </div>
       <div>
         <section class="relative bg-teal-900" x-data="{ mobileNavOpen: false }"><img class="absolute top-0 left-0 w-full h-full" src="fauna-assets/headers/bg-waves.png" alt=""/>
@@ -21,9 +21,9 @@
             <div class="container mx-auto px-4">
               <div class="relative flex items-center justify-between"><a class="inline-block" href="#"><img class="h-8" src="images/logo-white.svg" alt=""/></a>
                 <ul class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 hidden md:flex">
-                  <li class="mr-8"><a class="inline-block text-white hover:text-lime-500 font-medium" href="about.html">About us</a></li>
-                  <li class="mr-8"><a class="inline-block text-white hover:text-lime-500 font-medium" href="pricing.html">Pricing</a></li>
-                  <li class="mr-8"><a class="inline-block text-white hover:text-lime-500 font-medium" href="contact.html">Contact us</a></li>
+                  <li class="mr-8"><a class="inline-block text-white hover:text-lime-500 font-medium" href="about.html">Sobre Noostros</a></li>
+                  <li class="mr-8"><a class="inline-block text-white hover:text-lime-500 font-medium" href="pricing.html">Precios</a></li>
+                  <li class="mr-8"><a class="inline-block text-white hover:text-lime-500 font-medium" href="contact.html">blog</a></li>
                   <li><a class="inline-block text-white hover:text-lime-500 font-medium" href="blog.html">Blog</a></li>
                 </ul>
                 <div class="flex items-center justify-end">
@@ -47,7 +47,7 @@
             <div class="container mx-auto px-4 relative">
               <div class="max-w-lg xl:max-w-xl mx-auto text-center">
                 <h1 class="font-heading text-5xl xs:text-7xl xl:text-8xl tracking-tight text-white mb-8">Sensi Data</h1>
-                <p class="max-w-md xl:max-w-none text-lg text-white opacity-80 mb-10">Our commitment to green energy is paving the way for a cleaner, healthier planet. Join us on a journey towards a future where clean, renewable energy sources transform the way we power our lives.</p><a class="inline-flex py-4 px-6 items-center justify-center text-lg font-medium text-teal-900 border border-lime-500 hover:border-white bg-lime-500 hover:bg-white rounded-full transition duration-200" href="#">See our solutions</a>
+                <p class="max-w-md xl:max-w-none text-lg text-white opacity-80 mb-10">Nuestra misión es que las organizaciones y las empresas logren sus objetivos mediante el uso de construcción y analítica de datos</p><a class="inline-flex py-4 px-6 items-center justify-center text-lg font-medium text-teal-900 border border-lime-500 hover:border-white bg-lime-500 hover:bg-white rounded-full transition duration-200" href="#">Nuestras Soluciones</a>
               </div>
             </div>
           </div>
@@ -98,24 +98,20 @@
           <div class="flex flex-wrap -mx-4">
             <div class="w-full sm:w-1/2 md:w-1/4 px-4 mb-10 md:mb-0">
               <div class="text-center">
-                <h5 class="text-2xl xs:text-3xl lg:text-4xl xl:text-5xl mb-4">5,000 Mwh</h5><span class="text-base lg:text-lg text-gray-700">Renewable Energy Generated</span>
+                <h5 class="text-2xl xs:text-3xl lg:text-4xl xl:text-5xl mb-4">Clientes</h5><span class="text-base lg:text-lg text-gray-700">De las áreas de contabilidad, educación salud entre otros</span>
               </div>
             </div>
             <div class="w-full sm:w-1/2 md:w-1/4 px-4 mb-10 md:mb-0">
               <div class="text-center">
-                <h5 class="text-2xl xs:text-3xl lg:text-4xl xl:text-5xl mb-4">2,500+</h5><span class="text-base lg:text-lg text-gray-700">Renewable Energy Generated</span>
+                <h5 class="text-2xl xs:text-3xl lg:text-4xl xl:text-5xl mb-4">Profesionales</h5><span class="text-base lg:text-lg text-gray-700">Profesionales afines al área de la ciencia de datos y la informática</span>
               </div>
             </div>
             <div class="w-full sm:w-1/2 md:w-1/4 px-4 mb-10 sm:mb-0">
               <div class="text-center">
-                <h5 class="text-2xl xs:text-3xl lg:text-4xl xl:text-5xl mb-4">10,000+</h5><span class="text-base lg:text-lg text-gray-700">Renewable Energy Generated</span>
+                <h5 class="text-2xl xs:text-3xl lg:text-4xl xl:text-5xl mb-4">Tecnológias de vanguardia</h5><span class="text-base lg:text-lg text-gray-700">Métodos analíticos</span>
               </div>
             </div>
-            <div class="w-full sm:w-1/2 md:w-1/4 px-4">
-              <div class="text-center">
-                <h5 class="text-2xl xs:text-3xl lg:text-4xl xl:text-5xl mb-4">15%</h5><span class="text-base lg:text-lg text-gray-700">Renewable Energy Generated</span>
-              </div>
-            </div>
+            
           </div>
         </div>
       </section>
@@ -128,7 +124,7 @@
               </svg><span class="inline-block ml-2 text-sm font-medium">Solutions</span>
             </div>
             <div class="border-t border-teal-900 border-opacity-25 pt-14">
-              <h1 class="font-heading text-4xl sm:text-6xl mb-24">Key to clean future</h1>
+              <h1 class="font-heading text-4xl sm:text-6xl mb-24">Ayudar a las empresas a lograr sus objetivos</h1>
               <div class="flex flex-wrap -mx-4">
                 <div class="w-full sm:w-1/2 px-4 mb-16">
                   <div>
